styles.css
*{
    box-sizing: border-box;
}

body{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background-color: #f2f4f7;
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    height: 100vh;
}

/* ========== NOMBRANDO ESPACIOS DE FORMULARIO, SLOGAN Y FOOTER CON GRID ==========*/

.contenedor{    
    height: 100vh;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 5fr 1fr;
    grid-template-areas: 
    "slogan formulario"
    "footer footer";

}

/* ========== REPARTIENDO ESPACIOS DE FORMULARIO, SLOGAN Y FOOTER CON GRID ==========*/

.contenedor__slogan{
    grid-area: slogan;
}

.formulario__contenedor{
    grid-area: formulario;
    padding: 130px 0px 0px 90px;
}

.footer{
    grid-area: footer;
}

/* ========== DANDOLE ESTILO AL FORMULARIO ==========*/

.formulario{
    display: flex;
    flex-direction: column;
    width: 59%;
    height: 77%;
    background-color: #fff;
    border-radius: 7px; 
    box-shadow: 0px 0px 9px #0003;   
}

.formulario__grupo{
    text-align: center;
}

.formulario__contenedor-campos{
    display: flex;
    flex-direction: column;
    margin: 0 15px;
    
}

.formulario__campo{
    margin: 13px 0 0 0;
    width: 100%;
}

.formulario__input, .formulario__boton{
    width: 100%;
    padding: 17px;
    border-radius: 6px;
    border: none;
    border: 1px solid #ddd;
}

.formulario__input:focus {
    border:  none;
    box-shadow: 0 0 0 1px rgb(145, 145, 253);    /* color cian al enfocar */
    outline: none;                /* elimina contorno azul del navegador */
}

.formulario__input::placeholder {
    font-size: 17px;       
    color: #999;           
}


.formulario__boton--azul{
    background-color: #0866ff;
    color: #fff;
    font-weight: 600;
    line-height: 15px;
    font-size: 1.2rem;    
}

.formulario__enlace{
    text-align: center;
    color: #0866ff;
    text-decoration: none;
    font-size: 0.9rem;
}

.formulario__campo--enlace-separacion{
    padding: 1px;
}

.contenedor__linea{
    margin: 25px 0;
}

.formulario__linea{
    width: 90%;
    opacity: 0.3;
}

.formulario__boton--verde{
    background-color: #42b72a;
    color: #fff;
    font-weight: 600;
    width: 50%;
    line-height: 15px;
    font-size: 1rem;
}

.formulario__info-extra{
    width: 50%;
    margin: 25px 30px;
    font-size: 0.9rem;
    text-align: center;
}

/* ========== DANDOLE ESTILO AL SLOGAN ==========*/

.prueba1{
    width: 63%;
    margin: 170px 0 0 270px;
}
    
.contenedor__logo, .slogan__contenedor-texto{
    width: 100%;
    margin: 0;
    margin: -5px;
}

.slogan__logo{
    margin: 0 0 0 -30px;
    width: 65%;
}

.slogan__texo{
    font-size: 26px;
    margin: 0;
}

/* ========== DANDOLE ESTILO AL FOOTER ==========*/

.footer{
    background-color: #fff;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.footer__contenedor-enlaces-idiomas{
    width: 65%;
    margin: 30px 0 0 0;
}

.footer__contenedor-linea{
    width: 65%;
    opacity: 0.3;
}

.footer__contenedor-enlaces-opciones{
    width: 65%;
}

.enlace__footer, .idioma__enlace, .footer__contenedor-enlaces-opciones, .footer__derechos{
    margin: 0 5px 0 0;
    text-decoration: none;
    color: #777;
    font-family: sans-serif;
    font-weight: 100;
    font-size: 12px;
}

.footer__derechos{
    margin: 20px 0;
    text-align: start;
    width: 65%;
}

